# rmcp-rust-sdk

./: .gitignore  ROADMAP.md
.github/workflows/: ci.yml  conformance.yml
conformance/: Cargo.toml
crates/rmcp/: CHANGELOG.md  Cargo.toml
crates/rmcp-macros/: Cargo.toml
crates/rmcp-macros/src/: tool.rs
crates/rmcp/src/: anthropic_ext.rs  lib.rs  model.rs  sep2243_draft.rs  service.rs
crates/rmcp/src/handler/: server.rs
crates/rmcp/src/handler/server/: common.rs
crates/rmcp/src/handler/server/router/: tool.rs
crates/rmcp/src/model/: content.rs  elicitation_schema.rs  meta.rs  mrtr.rs  prompt.rs  request_state.rs  resource.rs  serde_impl.rs  task.rs  tool.rs
crates/rmcp/src/service/: client.rs
crates/rmcp/src/transport/: auth.rs
crates/rmcp/src/transport/common/: client_side_sse.rs  server_side_http.rs  unix_socket.rs
crates/rmcp/tests/: test_client_credentials.rs  test_elicitation.rs  test_embedded_resource_meta.rs  test_message_schema.rs  test_progress_subscriber.rs  test_request_timeout_progress.rs  test_server_discover.rs  test_server_discover_client.rs  test_server_discover_http.rs  test_streamable_http_json_response.rs  test_streamable_http_standard_headers.rs  test_tool_result_meta.rs  test_trace_context.rs
crates/rmcp/tests/test_message_schema/: client_json_rpc_message_schema_current.json  server_json_rpc_message_schema.json
examples/clients/: Cargo.toml
examples/servers/: Cargo.toml
examples/servers/src/common/: counter.rs
examples/simple-chat-client/: Cargo.toml
examples/transport/: Cargo.toml
examples/wasi/: Cargo.toml
(+5 files in other folders)
