[package]
name = "simple-chat-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.3", features = ["json"] }
anyhow = "1.0"
async-trait = "0.1"
toml = "1.1"
rmcp = { workspace = true, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest"
] }
clap = { version = "4.6", features = ["derive"] }
